--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             background: linear-gradient(135deg, #ff9a9e, #fecfef);
             border-radius: 15px;
             padding: 30px;
-            margin-top: 40px;
+            margin-bottom: 40px;
             box-shadow: 0 10px 30px rgba(255, 154, 158, 0.3);
         }
 
@@ -266,7 +266,7 @@
             </div>
         </div>
     </div>
-    
+
     <h1>🏛️ Pakistan Stock Exchange Trading Flow</h1>
 
     <div class="flow-section">
